# routes/index.js
@@ -1,12 +1,11 @@
 const router = require('express').Router();
 
-router.use('/', require('./swagger'));
-
 router.get('/', (req, res) => {
     //#swagger.tags = ['Hello World']
     res.send('Hello World!');
 });
 
 router.use('/users', require('./users'));
+router.use('/api-docs', require('./swagger'));
 
 module.exports = router;
